[package]
name = "rcon-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Run a RCON client from CLI"

[dependencies]
clap = { version = "4.5.58", features=["derive"]}
env_logger = "0.11.9"
log = "0.4.29"
rcon-tokio = "0.1.1"
rpassword = "7.4.0"
rustyline = { version = "17.0.2", features=["with-file-history"]}
serde = { version = "1.0.228", features=["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.49.0", features=["full"] }

[dev-dependencies]
tempfile = "3"
