[package]
name = "rcon-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A RCON client library and CLI for game server administration"
keywords = ["cli", "rcon", "gaming", "utility", "networking"]
categories = ["command-line-utilities", "network-programming", "game-development"]
repository = "https://github.com/connor-hanson/rcon-rs"
documentation = "https://docs.rs/rcon-cli"
readme = "./README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap = { version = "4.5.58", features=["derive"]}
env_logger = "0.11.9"
log = "0.4.29"
rcon-tokio = { version = "0.1.1", path = "../rcon-tokio" }
rpassword = "7.4.0"
rustyline = { version = "17.0.2", features=["with-file-history"]}
serde = { version = "1.0.228", features=["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.49.0", features=["full"] }

[dev-dependencies]
tempfile = "3"
