[package]
name = "rcon-tokio"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Rust client implementation of Valve's RCON protocol" 
keywords = ["lib", "rcon", "gaming", "utility", "networking"]
categories = ["network-programming", "game-development"]
repository = "https://github.com/connor-hanson/rcon-rs"
documentation = "https://docs.rs/rcon-tokio"
readme = "./README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features=["full"] }